- fixed scrolling for horizontal scrolling

--- a/css/test.css
+++ b/css/test.css
@@ -2,3 +2,27 @@
 width: 800px;
 height: 450px;
 }
+
+
+.chartWrapper {
+    position: relative;
+
+}
+
+.chartWrapper > canvas {
+    position: absolute;
+    left: 0;
+    top: 0;
+    pointer-events:none;
+}
+.chartAreaWrapper {
+  overflow-x: scroll;
+    position: relative;
+    width: 100%;
+}
+
+.chartAreaWrapper2 {
+
+    position: relative;
+    height: 300px;
+}
